compile-requirements.yml: remove --generate-hashes

--- a/.github/workflows/compile-requirements.yml
+++ b/.github/workflows/compile-requirements.yml
@@ -175,11 +175,11 @@ jobs:
             if [[ "${{ needs.check-requirements.outputs.dev_req_file }}" == "requirements-dev.in" ]]; then
               # --allow-unsafe: needed so that setuptools can be compiled, which is a dependency of pytest
               cat requirements.in
-              pip-compile requirements.in --upgrade --resolver=backtracking --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-$version.txt -v
-              pip-compile requirements-dev.in requirements.in --upgrade --resolver=backtracking --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-$version-dev.txt -v
+              pip-compile requirements.in --upgrade --resolver=backtracking --no-emit-index-url --allow-unsafe -o requirements-$version.txt -v
+              pip-compile requirements-dev.in requirements.in --upgrade --resolver=backtracking --no-emit-index-url --allow-unsafe -o requirements-$version-dev.txt -v
             else
               # --allow-unsafe: needed so that setuptools can be compiled, which is a dependency of pytest
-              pip-compile --resolver=backtracking --upgrade --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-$version.txt -v
+              pip-compile --resolver=backtracking --upgrade --no-emit-index-url --allow-unsafe -o requirements-$version.txt -v
               # Check to see if any requirements were actually generated; don't commit "empty" requirements files
               if [[ $(wc -l <requirements-$version.txt) -le 7 ]]; then
                 cat requirements-$version.txt
@@ -195,7 +195,7 @@ jobs:
                 echo "Got extras: $extras"
                 # Only generate dev requirements if there are extras
                 if [[ -n "$extras" ]]; then
-                  pip-compile $extras --resolver=backtracking --upgrade --generate-hashes --no-emit-index-url --allow-unsafe -o requirements-$version-dev.txt -v
+                  pip-compile $extras --resolver=backtracking --upgrade --no-emit-index-url --allow-unsafe -o requirements-$version-dev.txt -v
                 fi
               fi
             fi
