--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -416,6 +416,7 @@ jobs:
       - name: Run unit tests
         run: |
           # LLM environment variables (might not be needed)
+          pwd && ls
           if [[ "${{ github.event.repository.name }}" == "howso-insights-app-api" ]]; then
             export ANTHROPIC_API_KEY=${{ secrets.ANTHROPIC_API_KEY }}
             export OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
