--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -430,6 +430,9 @@ jobs:
           elif [[ "${{ github.event.repository.name }}" == "howso-llm-integrations" ]]; then
             export ANTHROPIC_API_KEY=${{ secrets.ANTHROPIC_API_KEY }}
             export OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+          elif [[ "${{ github.event.repository.name }}" == "howso-engine-connectors-py" ]]; then
+            export DATABRICKS_HOST=${{ secrets.DATABRICKS_HOST }}
+            export DATABRICKS_TOKEN=${{ secrets.DATABRICKS_TOKEN }}
           fi
 
           # If the platform is Windows, specify UTF8 enconding as it may not be on by default
