--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -418,7 +418,7 @@ jobs:
           openssl genrsa 1024 > ./private_key
           cat ./private_key | sed -e 's/^[ ]\*//' | openssl rsa -pubout > ./public_key
 
-      - name: Run unit testsS
+      - name: Run unit tests
         env:
           PYTEST_DEBUG: 1
         run: |
