--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -419,6 +419,7 @@ jobs:
           cat ./private_key | sed -e 's/^[ ]\*//' | openssl rsa -pubout > ./public_key
 
       - name: Run unit tests
+        continue-on-error: true
         run: |
           # LLM environment variables (might not be needed)
           pwd && ls
@@ -598,7 +599,7 @@ jobs:
           name: "traces-${{ inputs.platform-pretty }}-${{ inputs.python-version }}-${{ inputs.config-pretty }}"
           path: ${{ inputs.traces-fp }}
 
-      - name: Upload trace files
+      - name: Upload JUnit XML
         if: inputs.junit-upload && always()
         continue-on-error: true
         uses: actions/upload-artifact@v4
