--- a/.github/workflows/compile-requirements.yml
+++ b/.github/workflows/compile-requirements.yml
@@ -164,7 +164,7 @@ jobs:
             pyenv install $version
             pyenv local $version
             python --version
-            python -m pip install --upgrade pip
+            python -m pip install pip==25.2
             bash -l
             # Set extra index URL
             if [[ -n "${{ secrets.JFROG_ACCESS_TOKEN }}" ]]; then
