--- a/.github/workflows/compile-requirements.yml
+++ b/.github/workflows/compile-requirements.yml
@@ -168,7 +168,7 @@ jobs:
             bash -l
             # Set extra index URL
             if [[ -n "${{ secrets.JFROG_ACCESS_TOKEN }}" ]]; then
-              export PIP_EXTRA_INDEX_URL="https://vsts-build@diveplane.com:${{ secrets.JFROG_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple"
+              export PIP_EXTRA_INDEX_URL="${{ secrets.ARTIFACTORY_ACCESS_USER }}:${{ secrets.JFROG_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple"
             fi
             # Install pip-tools and run pip-compile
             pip install -U pip-tools==7.5.0
@@ -211,7 +211,7 @@ jobs:
           rm -f ./LICENSE-3RD-PARTY.txt
           # Set extra index URL
           if [[ -n "${{ secrets.JFROG_ACCESS_TOKEN }}" ]]; then
-            export PIP_EXTRA_INDEX_URL="https://vsts-build%40diveplane.com:${{ secrets.JFROG_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple"
+            export PIP_EXTRA_INDEX_URL="${{ secrets.ARTIFACTORY_ACCESS_USER }}:${{ secrets.JFROG_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple"
           fi
           if [[ -e "requirements-${{ inputs.license-python-version }}.txt" ]]; then
             python -m pip install -r requirements-${{ inputs.license-python-version }}.txt --no-deps
@@ -240,7 +240,7 @@ jobs:
           pip install hatch
           # Set extra index URL
           if [[ -n "${{ secrets.JFROG_ACCESS_TOKEN }}" ]]; then
-            export PIP_EXTRA_INDEX_URL="https://vsts-build@diveplane.com:${{ secrets.JFROG_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple"
+            export PIP_EXTRA_INDEX_URL="${{ secrets.ARTIFACTORY_ACCESS_USER }}:${{ secrets.JFROG_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple"
           fi
           # Install pip-tools
           pip install -U pip-tools
@@ -254,7 +254,7 @@ jobs:
           rm -f ./LICENSE-3RD-PARTY.txt
           # Set extra index URL
           if [[ -n "${{ secrets.JFROG_ACCESS_TOKEN }}" ]]; then
-            export PIP_EXTRA_INDEX_URL="https://vsts-build%40diveplane.com:${{ secrets.JFROG_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple"
+            export PIP_EXTRA_INDEX_URL="${{ secrets.ARTIFACTORY_ACCESS_USER}}:${{ secrets.JFROG_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple"
           fi
           if [[ -e "requirements-${{ inputs.license-python-version }}.txt" ]]; then
             python -m pip install -r requirements-${{ inputs.license-python-version }}.txt --no-deps
