--- a/.github/workflows/workflow-summary.yml
+++ b/.github/workflows/workflow-summary.yml
@@ -24,7 +24,7 @@ on:
 jobs:
 
   output-summary:
-    runs-on: ubuntu-latest
+    runs-on: howso-ubuntu-runner-xsmall
     steps:
 
       - uses: actions/checkout@v4
